discussion/kv_engine/155442/155442_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-43677: Add gsl to precompiled header

Before:

Analyzing build trace from 'alltargets.bin'...
**** Time summary:
Compilation (1076 times):
  Parsing (frontend):         2709.9 s
  Codegen & opts (backend):    780.9 s

After:

Analyzing build trace from 'gsl.bin'...
**** Time summary:
Compilation (1076 times):
  Parsing (frontend):         2598.4 s
  Codegen & opts (backend):    768.5 s

Change-Id: I1f4e4ffd2402103872bb09336a46f29286a8b3ec

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-06-10 14:28:34.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-10 15:10:37.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36700/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36700/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9737/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9737/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9737/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19315/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19315/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11312/ : FAILURE

Compile error at [2021-06-10T14:46:54.411Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11312/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11460/ : FAILURE

Compile error at [2021-06-10T14:45:57.108Z] tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
fatal error: gtest/gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11460/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11732/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11732/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10384/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10384/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8332/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/265/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31370/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
